--- a/Dashboard/Areas/AccountEntity/Views/Account/Profile.cshtml
+++ b/Dashboard/Areas/AccountEntity/Views/Account/Profile.cshtml
@@ -67,8 +67,8 @@
                                                     </a>
                                                 </li>
                                                     <li class="nav-item ">
-                                                        <a id="/AccountTeamEntity/AccountTeam/Index/?Fk_Account@Model.Id&ProfileLayOut=true" class="nav-link tab-item  @(returnItem==(int)AccountProfileItems.AccountTeam ? "active" : "")">
-                                                            <span class="fw-bold">@Localizer.Get("AccountTeams")</span>
+                                                        <a id="/AccountTeamEntity/AccountTeam/Index/?Fk_Account=@Model.Id&ProfileLayOut=true" class="nav-link tab-item  @(returnItem==(int)AccountProfileItems.AccountTeam ? "active" : "")">
+                                                            <span class="fw-bold">@Localizer.Get("Teams")</span>
                                                         </a>
                                                     </li>
 
