--- a/Dashboard/Areas/AppInfoEntity/Views/AppAbout/Details.cshtml
+++ b/Dashboard/Areas/AppInfoEntity/Views/AppAbout/Details.cshtml
@@ -38,7 +38,7 @@
                     <div class="col-12">
                         <div class="card">
                             <div class="card-body">
-                                <form class="form" asp-action="#">
+                                <form class="form" action="#">
                                     <input type="hidden" asp-for="Id" />
 
                                     <div asp-validation-summary="All" class="text-danger">@ViewData["Error"]</div>
