--- a/Dashboard/Views/Shared/Externalhtml/_labels.cshtml
+++ b/Dashboard/Views/Shared/Externalhtml/_labels.cshtml
@@ -9,6 +9,7 @@
 <input type="hidden" value="@Localizer.Get("Pdf")" id="PdfLbl" />
 <input type="hidden" value="@Localizer.Get("Copy")" id="CopyLbl" />
 <input type="hidden" value="@Localizer.Get("AddNew")" id="AddNewLbl" />
+<input type="hidden" value="@Localizer.Get("EditSpec")" id="EditSpecLbl" />
 <input type="hidden" value="@Localizer.Get("Search")" id="SearchLbl" />
 <input type="hidden" value="@Localizer.Get("Display")" id="DispalyLbl" />
 <input type="hidden" value="@Localizer.Get("Records")" id="EntitiesLbl" />
